# ConverterSDT

./: .gitignore  CMakeLists.txt  main.cpp  main_window.cpp  main_window.h  main_window.ui
controller/: controller.cpp  controller.hpp
model/: converter_decimal_to_p.cpp  converter_decimal_to_p.hpp  converter_p_to_decimal.cpp  converter_p_to_decimal.hpp  editor.cpp  editor.hpp  history.cpp  history.hpp
view/: conversion.js  history_window.cpp  history_window.hpp  history_window.ui  main.qml  main_window.cpp  main_window.hpp  main_window.ui
view/components/: BottomPanel.qml  TopPanel.qml
view/pages/: HistoryPage.qml  MainPage.qml  ReferencePage.qml
